--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -13,8 +13,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   font-weight: 300;
-  /* background-color: #fdfdfd; */
-  background-color: red; 
+  background-color: #fdfdfd;
 }
 
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: 400; }
@@ -46,6 +45,8 @@ a:visited { color: #205caa; }
   border-bottom: 1px solid #e8e8e8;
   min-height: 56px;
   background-color: white;
+  position: absolute;
+  top: 0px;
 }
 
 .site-title,
